# MarkOS_commons

./: CMakeLists.txt  README.md
src/: some.cpp  types.h
src/collections/: InMemoryList.h  Iterator.h  LinkedList.h  List.h
src/filesystem/: File.h  FileSystem.h
src/memory/: Pointer.cpp  Pointer.h  move.h
src/string/: String.cpp  String.h
src/util/: Optional.h
test/: CMakeLists.txt
test/collections/: InMemoryListTest.cpp  InMemoryListTest.h  LinkedListTest.cpp  LinkedListTest.h
test/string/: StringTest.cpp  StringTest.h
